[package]
name = "websocket-counter"
version = "0.1.0"
description = "Websockets and Counter demo using dominator"
authors = ["Pauan <pauanyu+github@pm.me>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3  # 3 => fast, s/z => small

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]  # O4 => fast, Oz/Os => small

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
console_error_panic_hook = "0.1.6"
dominator = "0.5.31"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.43"
futures = "0.3.30"
futures-signals = "0.3.20"
once_cell = "1.7.2"
gloo-net = "0.6.0"
web-sys = { version = "0.3.71", features=["console"]}
